OpenDocument	Loading. 		Speed up for loading of repeated rows. Comments, conditions, styles and validities 		are stored in RectStorages and repeated rows often have only styles set, but no 		contents. Take advantage of this fact. For cells with contents it stays slow, 		because the iteration can't be avoided.

BUG: 132454

svn path=/trunk/koffice/; revision=700440